added auth to payment service
